--- a/backend/package.json
+++ b/backend/package.json
@@ -20,13 +20,18 @@
   "homepage": "https://github.com/salacryl/base_nodejs_bootstrap#readme",
   "dependencies": {
     "axios": "^0.19.2",
+    "axios-cookiejar-support": "^1.0.0",
     "body-parser": "^1.19.0",
     "browser-sync": "^2.26.7",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "jsdoc": "^3.6.3",
     "method-override": "^3.0.0",
     "nodemon": "^2.0.2",
+    "qs": "^6.9.4",
+    "tough-cookie": "^4.0.0",
+    "tunnel": "0.0.6",
     "winston": "^3.2.1"
   },
   "devDependencies": {
